--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -4,27 +4,11 @@
 <div class="navbar-fixed" ng-if="!user">
     <nav class="top-nav top-nav-trans dark-primary-color" role="navigation">
         <div class="container">
-            <a href="/#/" class="brand-logo"><img src="assets/images/logo-mini.png" height="30px" ng-click="menuItem = ''"/></a>
+            <a href="/#/" class="brand-logo"><img src="assets/images/logo-mini.png" height="30px" ng-click="menuItem = ''" alt="Qaobee"/></a>
             <div class="nav-wrapper">
                 <ul class="left hide-on-med-and-down nav-top-menu" ng-if=" menuItem !== 'signup'">
-                    <li ng-class="{'active' : menuItem === 'concept'}">
-                        <a href="javascript:void(0)" translate="navbar.concept" ng-click="gotoAnchor('concept')"></a>
-                    </li>
-                    <li ng-class="{'active' : menuItem === 'download'}">
-                        <a href="javascript:void(0)" translate="navbar.download" ng-click="gotoAnchor('download')"></a>
-                    </li>
-                    <li ng-class="{'active' : menuItem === 'collect'}">
-                        <a href="javascript:void(0)" translate="navbar.collect" ng-click="gotoAnchor('collect')"></a>
-                    </li>
-                    <li ng-class="{'active' : menuItem === 'progress'}">
-                        <a href="javascript:void(0)" translate="navbar.progress" ng-click="gotoAnchor('progress')"></a>
-                    </li>
-                    <li ng-class="{'active' : menuItem === 'collaborate'}">
-                        <a href="javascript:void(0)" translate="navbar.collaborate" ng-click="gotoAnchor('collaborate')"></a>
-                    </li>
-                    <li ng-class="{'active' : menuItem === 'contact'}">
-                        <a href="javascript:void(0)" translate="navbar.contact" ng-click="gotoAnchor('contact')"></a>
-                    </li>
+                    <li><a class="dropdown-header-button" href="#!" data-activates="dropdown-header"><span translate="navbar.concept"></span> <i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a href="#/about">A propos</a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li>
@@ -72,6 +56,26 @@
         </div>
     </nav>
 </div>
+<ul id="dropdown-header" class="dropdown-content">
+    <li ng-class="{'active' : menuItem === 'concept'}">
+        <a href="javascript:void(0)" translate="navbar.concept" ng-click="gotoAnchor('concept')"></a>
+    </li>
+    <li ng-class="{'active' : menuItem === 'download'}">
+        <a href="javascript:void(0)" translate="navbar.download" ng-click="gotoAnchor('download')"></a>
+    </li>
+    <li ng-class="{'active' : menuItem === 'collect'}">
+        <a href="javascript:void(0)" translate="navbar.collect" ng-click="gotoAnchor('collect')"></a>
+    </li>
+    <li ng-class="{'active' : menuItem === 'progress'}">
+        <a href="javascript:void(0)" translate="navbar.progress" ng-click="gotoAnchor('progress')"></a>
+    </li>
+    <li ng-class="{'active' : menuItem === 'collaborate'}">
+        <a href="javascript:void(0)" translate="navbar.collaborate" ng-click="gotoAnchor('collaborate')"></a>
+    </li>
+    <li ng-class="{'active' : menuItem === 'contact'}">
+        <a href="javascript:void(0)" translate="navbar.contact" ng-click="gotoAnchor('contact')"></a>
+    </li>
+</ul>
 <!-- Menu Connected First header-->
 <div class="navbar-fixed" ng-if="user && !user.account.firstConnexion && !notpaid">
     <nav class="top-nav dark-primary-color visible-nav" role="navigation">
@@ -160,7 +164,7 @@
     <div class="container">
         <div class="nav-wrapper">
             <a href="/#/" class="hide-on-med-and-down brand-logo">
-                <img src="assets/images/logo-mini.png" height="30px"/>
+                <img src="assets/images/logo-mini.png" height="30px" alt="Qaobee"/>
             </a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="https://twitter.com/Qaobee"
