--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -3,7 +3,7 @@
         <h2 class="center-align" translate="landing.contact.about"></h2>
         <div class="row primary-text-color">
             <div class="col s12 m4">
-                <div class="card">
+                <div class="card light-primary-color">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Christophe.jpg" alt="image">
                     </div>
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card">
+                <div class="card light-primary-color">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Pascal.JPG" alt="image">
                     </div>
@@ -47,7 +47,7 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card">
+                <div class="card light-primary-color">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Xavier.jpg" alt="image">
                     </div>
@@ -71,7 +71,7 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card">
+                <div class="card light-primary-color">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/mathieu.jpg" alt="image">
                     </div>
@@ -91,7 +91,7 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card">
+                <div class="card light-primary-color">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/florent.jpg" alt="image">
                     </div>
@@ -111,7 +111,7 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card">
+                <div class="card light-primary-color">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Jerome.JPG" alt="image">
                     </div>
