--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -9,11 +9,9 @@
                     <h5 class="center-align col s12 white-text flow-text" translate="landing.sub-title"></h5>
                 </div>
             </div>
-            <div class="play-ico stores">
-                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
-                   rel="noopener">
-                    <img src="assets/images/googleplay.png" class="responsive-img"  alt="play store logo" />
-                </a>
+            <div class="download-btn">
+                <a href="javascript:void(0)" class="btn waves-effect waves-light call-to-action"
+                   ng-click="gotoAnchor('download')"><i class="fa fa-fw fa-mobile"></i> {{'navbar.download' | translate}}</a>
             </div>
             <div class="outter-arrow waves-effect waves-light">
                 <a href="javascript:void(0)" class="bounce fa fa-fw fa-3x fa-arrow-down"
