--- a/src/app/modules/public/parts/02.html
+++ b/src/app/modules/public/parts/02.html
@@ -1,24 +1,24 @@
-<div class="home section" id="concept">
+<div class="home container" id="concept">
     <div class="row">
         <div class="col s12">
             <h3 class="center accent-text-color" translate="landing.concept.title"></h3>
             <p>&nbsp;</p>
             <ul class="icon-block">
-                <li>
+                <li><a href="javascript:void(0)" ng-click="gotoAnchor('collect')">
                     <i class="fa fa-fw fa-eye accent-text-color"></i>
                     <h3 translate="landing.concept.capture" class="hide-on-small-only"></h3>
                     <h5 translate="landing.concept.capture" class="hide-on-med-and-up"></h5>
-                </li>
-                <li>
+                </a></li>
+                <li><a href="javascript:void(0)" ng-click="gotoAnchor('progress')">
                     <i class="fa fa-fw fa-bar-chart accent-text-color"></i>
                     <h3 translate="landing.concept.analyze" class="hide-on-small-only"></h3>
                     <h5 translate="landing.concept.analyze" class="hide-on-med-and-up"></h5>
-                </li>
-                <li>
+                </a></li>
+                <li><a href="javascript:void(0)" ng-click="gotoAnchor('collaborate')">
                     <i class="fa fa-fw fa-flag accent-text-color"></i>
                     <h3 translate="landing.concept.progress" class="hide-on-small-only"></h3>
                     <h5 translate="landing.concept.progress" class="hide-on-med-and-up"></h5>
-                </li>
+                </a></li>
             </ul>
         </div>
     </div>
