--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,100 +1,95 @@
-<div class="home" id="collect">
-    <div class="row container">
-        <div class="s6">
-            <div class="row">
-                <div class="col s12">&nbsp;</div>
-                
-                <div class="col s12">
-                    <ul class="collapsible popout" data-collapsible="accordion" watch>
-                        <li>
-                            <div class="collapsible-header light-primary-color">
-                                <div class="row">
-                                    <div class="col m2 s12 icon-conceptH">
-                                        <i class="fa fa-eye fa-fw fa-4x white-text"></i>
-                                    </div>
-                                    <div class="col m10 s12 left-align">
-                                        <h3 translate="landing.concept.capture" class="hide-on-small-only primary-text-color"></h3>
-                                        <h5 translate="landing.concept.capture" class="hide-on-med-and-up accent-text-color"></h5>
-                                        <h5 translate="pricing.offers.standard.collectMob.title"></h5>
-                                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more" class="right accent-text-color"></a></h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <br/>
-                            <div class="outerdevice hide-on-small-only">
-                                <div class="device">
-                                    <slide-wrapper arrows="false">
-                                        <ul class="slide screenshot">
-                                            <li><img src="assets/images/handball/scshApp01.png" materialboxed class="materialboxed responsive-img"></li>
-                                            <li><img src="assets/images/handball/scshApp04.png" materialboxed class="materialboxed responsive-img"></li>
-                                            <li><img src="assets/images/handball/scshApp05.png" materialboxed class="materialboxed responsive-img"></li>
-                                            <li><img src="assets/images/handball/scshApp07.png" materialboxed class="materialboxed responsive-img"></li>
-                                        </ul>
-                                    </slide-wrapper>
-                                </div>
-                            </div>
-                            <br/>
-                            <div class="collapsible-body white">
-                                <div class="row">
-                                    <div class="card col s12 light-primary-color">
-                                        <div class="card-content">
+<div class="home container" id="collect">
+    <ul class="collapsible" data-collapsible="accordion" watch>
+        <li>
+            <div class="collapsible-header light-primary-color">
+                <div class="row">
+                    <div class="col m2 s12 icon-conceptH">
+                        <i class="fa fa-eye fa-fw fa-4x white-text"></i>
+                    </div>
+                    <div class="col m10 s12 left">
+                        <h3 translate="landing.concept.capture"
+                            class="hide-on-small-only primary-text-color"></h3>
+                        <h5 translate="landing.concept.capture"
+                            class="hide-on-med-and-up accent-text-color"></h5>
+                        <h5 translate="pricing.offers.standard.collectMob.title"></h5>
+                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
+                               class="right accent-text-color"></a></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="collapsible-body white">
+                <div class="row">
+                    <div class="card col s12 light-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-bullseye fa-fw"></i>
                                                 <b translate="pricing.offers.standard.collectMob.detail.shootTitle"></b>
                                             </span>
-                                            <p translate="pricing.offers.standard.collectMob.detail.shoot"></p>
-                                        </div>
-                                    </div>
+                            <p translate="pricing.offers.standard.collectMob.detail.shoot"></p>
+                        </div>
+                    </div>
 
-                                    <div class="card col s12 light-primary-color">
-                                        <div class="card-content">
+                    <div class="card col s12 light-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-area-chart fa-fw"></i>
                                                 <b translate="pricing.offers.standard.collectMob.detail.attackTitle"></b>
                                             </span>
 
-                                            <p translate="pricing.offers.standard.collectMob.detail.attack"></p>
-                                        </div>
-                                    </div>
+                            <p translate="pricing.offers.standard.collectMob.detail.attack"></p>
+                        </div>
+                    </div>
 
-                                    <div class="card col s12 light-primary-color">
-                                        <div class="card-content">
+                    <div class="card col s12 light-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-pie-chart fa-fw"></i>
                                                 <b translate="pricing.offers.standard.collectMob.detail.defenseTitle"></b>
                                             </span>
 
-                                            <p translate="pricing.offers.standard.collectMob.detail.defense"></p>
-                                        </div>
-                                    </div>
+                            <p translate="pricing.offers.standard.collectMob.detail.defense"></p>
+                        </div>
+                    </div>
 
-                                    <div class="card col s12 dark-primary-color">
-                                        <div class="card-content">
+                    <div class="card col s12 dark-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-bolt fa-fw"></i>
                                                 <b translate="pricing.offers.standard.collectMob.detail.disciplineTitle"></b>
                                             </span>
 
-                                            <p translate="pricing.offers.standard.collectMob.detail.discipline"></p>
-                                        </div>
-                                    </div>
+                            <p translate="pricing.offers.standard.collectMob.detail.discipline"></p>
+                        </div>
+                    </div>
 
-                                    <div class="card col s12 dark-primary-color">
-                                        <div class="card-content">
+                    <div class="card col s12 dark-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-clock-o fa-fw"></i>
                                                 <b translate="pricing.offers.standard.collectMob.detail.statusTitle"></b>
                                             </span>
 
-                                            <p translate="pricing.offers.standard.collectMob.detail.status"></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                            <p translate="pricing.offers.standard.collectMob.detail.status"></p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+            <div class="outerdevice hide-on-small-only">
+                <div class="device">
+                    <slide-wrapper arrows="false">
+                        <ul class="slide screenshot">
+                            <li><img src="assets/images/handball/scshApp01.png" materialboxed
+                                     class="materialboxed responsive-img"></li>
+                            <li><img src="assets/images/handball/scshApp04.png" materialboxed
+                                     class="materialboxed responsive-img"></li>
+                            <li><img src="assets/images/handball/scshApp05.png" materialboxed
+                                     class="materialboxed responsive-img"></li>
+                            <li><img src="assets/images/handball/scshApp07.png" materialboxed
+                                     class="materialboxed responsive-img"></li>
+                        </ul>
+                    </slide-wrapper>
+                </div>
+            </div>
+        </li>
+    </ul>
 </div>
