--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -1,78 +1,72 @@
-<div class="home" id="progress">
-    <div class="row container">
-        <div class="s6">
-            <div class="row">
-                <div class="col s12">&nbsp;</div>
-                
-                <div class="col s12">
-                    <ul class="collapsible popout" data-collapsible="accordion" watch>
-                        <li>
-                            <div class="collapsible-header light-primary-color">
-                                <div class="row">
-                                    <div class="col m2 s12 icon-conceptH">
-                                        <i class="fa fa-flag fa-fw fa-4x white-text"></i>
-                                    </div>
-                                    <div class="col m10 s12 left-align">
-                                        <h3 translate="pricing.offers.standard.shareWeb.title" class="hide-on-small-only"></h3>
-                                        <h5 translate="pricing.offers.standard.shareWeb.title" class="hide-on-med-and-up"></h5>
-                                        <h5 translate="pricing.offers.standard.shareWeb.intro"></h5>
-                                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more" class="right accent-text-color"></a></h5>
-                                    </div>
-                                </div>
+<div class="home container" id="progress">
+    <div class="row">
+        <div class="col s12">
+            <ul class="collapsible" data-collapsible="accordion" watch>
+                <li>
+                    <div class="collapsible-header light-primary-color">
+                        <div class="row">
+                            <div class="col m2 s12 icon-conceptH">
+                                <i class="fa fa-flag fa-fw fa-4x white-text"></i>
                             </div>
-                            <br/>
-                            <div class="laptop hide-on-med-and-down">
-                                <div class="upper white-text">
-                                    <slide-wrapper arrows="false">
-                                        <ul class="slide screenshot">
-                                            <li>
-                                                <img src="assets/images/handball/scshWeb01.png" materialboxed class="materialboxed responsive-img">
-                                            </li>
-                                        </ul>
-                                    </slide-wrapper>
-                                </div>
-                                <div class="lower"></div>
+                            <div class="col m10 s12 left-align">
+                                <h3 translate="pricing.offers.standard.shareWeb.title" class="hide-on-small-only"></h3>
+                                <h5 translate="pricing.offers.standard.shareWeb.title" class="hide-on-med-and-up"></h5>
+                                <h5 translate="pricing.offers.standard.shareWeb.intro"></h5>
+                                <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
+                                       class="right accent-text-color"></a></h5>
                             </div>
-                            <br/>
-                            <div class="collapsible-body white">
-                                <div class="row">
-                                    <div class="card col s12 light-primary-color">
-                                        <div class="card-content">
+                        </div>
+                    </div>
+                    <div class="collapsible-body white">
+                        <div class="row">
+                            <div class="card col s12 light-primary-color">
+                                <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-share-alt fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.shareWeb.item1Title' | translate}}</b>
+                                                <b translate="pricing.offers.standard.shareWeb.item1Title"></b>
                                             </span>
-                                            <p translate="pricing.offers.standard.shareWeb.item1Detail"></p>
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="card col s12 light-primary-color">
-                                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-area-chart fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.teamWeb.title' | translate}}</b>
-                                            </span>
-
-                                            <p translate="pricing.offers.standard.teamWeb.detail"></p>
-                                        </div>
-                                    </div>
-
-                                    <div class="card col s12 dark-primary-color">
-                                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-users fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.shareWeb.item2Title' | translate}}</b>
-                                            </span>
-                                            <p translate="pricing.offers.standard.shareWeb.item2Detail"></p>
-                                        </div>
-                                    </div>
-
+                                    <p translate="pricing.offers.standard.shareWeb.item1Detail"></p>
                                 </div>
                             </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
+                            <div class="card col s12 light-primary-color">
+                                <div class="card-content">
+                                            <span class="card-title">
+                                                <i class="fa fa-area-chart fa-fw"></i>
+                                                <b translate="pricing.offers.standard.teamWeb.title"></b>
+                                            </span>
+
+                                    <p translate="pricing.offers.standard.teamWeb.detail"></p>
+                                </div>
+                            </div>
+
+                            <div class="card col s12 dark-primary-color">
+                                <div class="card-content">
+                                            <span class="card-title">
+                                                <i class="fa fa-users fa-fw"></i>
+                                                <b translate="pricing.offers.standard.shareWeb.item2Title"></b>
+                                            </span>
+                                    <p translate="pricing.offers.standard.shareWeb.item2Detail"></p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="laptop hide-on-med-and-down">
+                        <div class="upper white-text">
+                            <slide-wrapper arrows="false">
+                                <ul class="slide screenshot">
+                                    <li>
+                                        <img src="assets/images/handball/scshWeb01.png" materialboxed
+                                             class="materialboxed responsive-img">
+                                    </li>
+                                </ul>
+                            </slide-wrapper>
+                        </div>
+                        <div class="lower"></div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
