--- a/src/app/modules/public/parts/08.html
+++ b/src/app/modules/public/parts/08.html
@@ -1,21 +1,21 @@
-<div class="home section center-align dark-primary-color" id="contact">
-    <div class="row">
-        <h4 class="white-text" translate="landing.connect"></h4>
-        <div class="center col s12">
-            <ul class="social-icons">
-                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color" rel="noopener">
-                    <img src="assets/images/Twitter.png" class="responsive-img"><br/>
-                    <span class="white-text">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color" rel="noopener">
-                    <img src="assets/images/facebook.png" class="responsive-img"><br/>
-                    <span class="white-text">Facebook</span></a></li>
-                <li><a href="mailto:contact@qaobee.com" class="accent-text-color">
-                    <img src="assets/images/Gmail.png" class="responsive-img"><br/>
-                    <span class="white-text">E-mail</span></a></li>
-                <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color">
-                    <img src="assets/images/Livejournal.png" class="responsive-img"><br/>
-                    <span class="white-text">Newsletter</span></a></li>
-            </ul>
+<div class="home container-full center-align dark-primary-color" id="contact">
+    <h4 class="white-text" translate="landing.connect"></h4>
+    <div class="row social-icons">
+        <div class="col s6 m3"><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"
+                                     rel="noopener">
+            <img src="assets/images/Twitter.png" class="responsive-img"><br/>
+            <span class="white-text">Twitter</span></a></div>
+        <div class="col s6 m3"><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"
+                                     rel="noopener">
+            <img src="assets/images/facebook.png" class="responsive-img"><br/>
+            <span class="white-text">Facebook</span></a></div>
+        <div class="col s6 m3"><a href="mailto:contact@qaobee.com" class="accent-text-color">
+            <img src="assets/images/Gmail.png" class="responsive-img"><br/>
+            <span class="white-text">E-mail</span></a></div>
+        <div class="col s6 m3"><a href="javascript:void(0);" data-target="modalSubMailingList"
+                                     class="accent-text-color">
+            <img src="assets/images/Livejournal.png" class="responsive-img"><br/>
+            <span class="white-text">Newsletter</span></a>
         </div>
     </div>
     <div class="row">
