--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -78,13 +78,13 @@
                 <div class="device">
                     <slide-wrapper arrows="false">
                         <ul class="slide screenshot">
-                            <li><img src="assets/images/handball/scshApp01.png" materialboxed
+                            <li><img src="assets/images/handball/scshApp01.png" materialboxed alt="screenshot"
                                      class="materialboxed responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp04.png" materialboxed
+                            <li><img src="assets/images/handball/scshApp04.png" materialboxed alt="screenshot"
                                      class="materialboxed responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp05.png" materialboxed
+                            <li><img src="assets/images/handball/scshApp05.png" materialboxed alt="screenshot"
                                      class="materialboxed responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp07.png" materialboxed
+                            <li><img src="assets/images/handball/scshApp07.png" materialboxed alt="screenshot"
                                      class="materialboxed responsive-img"></li>
                         </ul>
                     </slide-wrapper>
