--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -23,13 +23,13 @@
                         <div class="upper white-text">
                             <slide-wrapper arrows="false">
                                 <ul class="slide screenshot">
-                                    <li><img src="assets/images/handball/scshWeb08.png" materialboxed
+                                    <li><img src="assets/images/handball/scshWeb08.png" materialboxed alt="screenshot"
                                              class="materialboxed responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshWeb03.png" materialboxed
+                                    <li><img src="assets/images/handball/scshWeb03.png" materialboxed alt="screenshot"
                                              class="materialboxed responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshWeb04.png" materialboxed
+                                    <li><img src="assets/images/handball/scshWeb04.png" materialboxed alt="screenshot"
                                              class="materialboxed responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshWeb06.png" materialboxed
+                                    <li><img src="assets/images/handball/scshWeb06.png" materialboxed alt="screenshot"
                                              class="materialboxed responsive-img"></li>
                                 </ul>
                             </slide-wrapper>
