--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -57,7 +57,7 @@
                             <slide-wrapper arrows="false">
                                 <ul class="slide screenshot">
                                     <li>
-                                        <img src="assets/images/handball/scshWeb01.png" materialboxed
+                                        <img src="assets/images/handball/scshWeb01.png" materialboxed alt="screenshot"
                                              class="materialboxed responsive-img">
                                     </li>
                                 </ul>
