--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -1,4 +1,4 @@
-<div class="home container dark-primary-color" id="download">
+<div class="home container-full dark-primary-color" id="download">
     <div class="row">
         <div class="col s12 center-align">
             <h3 translate="landing.area-6.title"></h3>
@@ -9,7 +9,7 @@
         
         <div class="col s12 center">
                 <a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color">
-                    <img src="assets/images/Livejournal.png" class="responsive-img"><br/>
+                    <img src="assets/images/Livejournal.png" class="responsive-img" alt="icone"><br/>
                     <span class="white-text">Newsletter</span></a>
         </div>
     </div>
