--- a/src/app/modules/public/parts/08.html
+++ b/src/app/modules/public/parts/08.html
@@ -2,19 +2,19 @@
     <h4 class="white-text" translate="landing.connect"></h4>
     <div class="row social-icons">
         <div class="col s6 m3"><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"
-                                     rel="noopener">
-            <img src="assets/images/Twitter.png" class="responsive-img"><br/>
+                                  rel="noopener">
+            <img src="assets/images/Twitter.png" class="responsive-img" alt="icone"><br/>
             <span class="white-text">Twitter</span></a></div>
         <div class="col s6 m3"><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"
-                                     rel="noopener">
-            <img src="assets/images/facebook.png" class="responsive-img"><br/>
+                                  rel="noopener">
+            <img src="assets/images/facebook.png" class="responsive-img" alt="icone"><br/>
             <span class="white-text">Facebook</span></a></div>
-        <div class="col s6 m3"><a href="mailto:contact@qaobee.com" class="accent-text-color">
+        <div class="col s6 m3"><a href="mailto:contact@qaobee.com" class="accent-text-color" alt="icone">
             <img src="assets/images/Gmail.png" class="responsive-img"><br/>
             <span class="white-text">E-mail</span></a></div>
         <div class="col s6 m3"><a href="javascript:void(0);" data-target="modalSubMailingList"
-                                     class="accent-text-color">
-            <img src="assets/images/Livejournal.png" class="responsive-img"><br/>
+                                  class="accent-text-color">
+            <img src="assets/images/Livejournal.png" class="responsive-img" alt="icone"><br/>
             <span class="white-text">Newsletter</span></a>
         </div>
     </div>
