QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -15,11 +15,9 @@
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"
-                           rel="noopener"> <img src="assets/images/Twitter.png" class="social-icon"></a></li>
+                           rel="noopener"><img src="assets/images/Twitter.png" class="social-icon"></a></li>
                     <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"
                            rel="noopener"><img src="assets/images/facebook.png" class="social-icon"></a></li>
-                    <li><a href="mailto:contact@qaobee.com" class="accent-text-color">
-                        <img src="assets/images/Gmail.png" class="social-icon"></a></li>
                     <li>
                         <a class="waves-effect waves-white secondary-color" ng-click="openSignup()"
                            translate="navbar.signup"></a>
@@ -65,6 +63,10 @@
                     <li>
                         <a class="white-text" ng-click="openLogin()" translate="navbar.connect"></a>
                     </li>
+                    <li><a href="https://twitter.com/Qaobee" target="_blank" class="white-text"
+                           rel="noopener"><img src="assets/images/Twitter.png" class="social-icon no-margin"> Twitter</a></li>
+                    <li><a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"
+                           rel="noopener"><img src="assets/images/facebook.png" class="social-icon no-margin"> Facebook</a></li>
                 </ul>
                 <!-- menu mobile end -->
             </div>
