QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -14,10 +14,10 @@
                     <li><a href="#/about">A propos</a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"
-                           rel="noopener"><img src="assets/images/Twitter.png" class="social-icon"></a></li>
+                    <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color" alt="icon"
+                           rel="noopener"><img src="assets/images/Twitter.png" class="social-icon" alt="icon"></a></li>
                     <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"
-                           rel="noopener"><img src="assets/images/facebook.png" class="social-icon"></a></li>
+                           rel="noopener"><img src="assets/images/facebook.png" class="social-icon" alt="icon"></a></li>
                     <li>
                         <a class="waves-effect waves-white secondary-color" ng-click="openSignup()"
                            translate="navbar.signup"></a>
@@ -64,9 +64,9 @@
                         <a class="white-text" ng-click="openLogin()" translate="navbar.connect"></a>
                     </li>
                     <li><a href="https://twitter.com/Qaobee" target="_blank" class="white-text"
-                           rel="noopener"><img src="assets/images/Twitter.png" class="social-icon no-margin"> Twitter</a></li>
+                           rel="noopener"><img src="assets/images/Twitter.png" class="social-icon no-margin" alt="icon"> Twitter</a></li>
                     <li><a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"
-                           rel="noopener"><img src="assets/images/facebook.png" class="social-icon no-margin"> Facebook</a></li>
+                           rel="noopener"><img src="assets/images/facebook.png" class="social-icon no-margin" alt="icon"> Facebook</a></li>
                 </ul>
                 <!-- menu mobile end -->
             </div>
