--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -1,4 +1,4 @@
-<div class="home container-full dark-primary-color" id="download">
+<div class="home container-full dark-primary-color">
     <div class="row">
         <div class="col s12 center-align">
             <h3 translate="landing.area-6.title"></h3>
