--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -1,4 +1,4 @@
-<div class="home container" id="progress">
+<div class="home container" id="collaborate">
     <div class="row">
         <div class="col s12">
             <ul class="collapsible" data-collapsible="accordion" watch>
