--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -11,7 +11,7 @@
             </div>
             <div class="download-btn">
                 <a href="javascript:void(0)" class="btn waves-effect waves-light call-to-action"
-                   ng-click="gotoAnchor('download')"><i class="fa fa-fw fa-mobile"></i> {{'navbar.download' | translate}}</a>
+                   ng-click="gotoAnchor('download')"><i class="fa fa-fw fa-download"></i> {{'navbar.download' | translate}}</a>
             </div>
             <div class="outter-arrow waves-effect waves-light">
                 <a href="javascript:void(0)" class="bounce fa fa-fw fa-3x fa-arrow-down"
