--- a/src/app/modules/public/parts/02.html
+++ b/src/app/modules/public/parts/02.html
@@ -1,4 +1,6 @@
 <div class="home container" id="concept">
+    <div class="row"><div class="col s12">&nbsp;</div></div>
+    <div class="row"><div class="col s12">&nbsp;</div></div>
     <div class="row">
         <div class="col s12">
             <h3 class="center accent-text-color" translate="landing.concept.title"></h3>
@@ -22,4 +24,6 @@
             </ul>
         </div>
     </div>
+    <div class="row"><div class="col s12">&nbsp;</div></div>
+    <div class="row"><div class="col s12">&nbsp;</div></div>
 </div>
