--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,4 +1,5 @@
 <div class="home container" id="collect">
+    <div class="row"><div class="col s12">&nbsp;</div></div>
     <ul class="collapsible" data-collapsible="accordion" watch>
         <li>
             <div class="collapsible-header light-primary-color">
@@ -8,7 +9,7 @@
                     </div>
                     <div class="col m10 s12 left">
                         <h3 translate="landing.concept.capture"
-                            class="hide-on-small-only primary-text-color"></h3>
+                            class="hide-on-small-only accent-text-color"></h3>
                         <h5 translate="landing.concept.capture"
                             class="hide-on-med-and-up accent-text-color"></h5>
                         <h5 translate="pricing.offers.standard.collectMob.title"></h5>
