--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -1,4 +1,5 @@
 <div class="home container" id="progress">
+    <div class="row"><div class="col s12">&nbsp;</div></div>
     <div class="row">
         <div class="col s12">
             <ul class="collapsible" data-collapsible="accordion" watch>
@@ -65,4 +66,5 @@
             </ul>
         </div>
     </div>
+    <div class="row"><div class="col s12">&nbsp;</div></div>
 </div>
