The last commit

--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -9,9 +9,9 @@
                     </div>
                     <div class="col m10 s12 left">
                         <h3 translate="landing.concept.capture"
-                            class="hide-on-small-only accent-text-color"></h3>
+                            class="hide-on-small-only primary-text-color"></h3>
                         <h5 translate="landing.concept.capture"
-                            class="hide-on-med-and-up accent-text-color"></h5>
+                            class="hide-on-med-and-up primary-text-color"></h5>
                         <h5 translate="pricing.offers.standard.collectMob.title"></h5>
                         <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
                                class="right accent-text-color"></a></h5>
