QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -1,4 +1,4 @@
-<div class="home container-full dark-primary-color" id="download">
+<div class="home dark-primary-color" id="download">
     <div class="row">
         <div class="col s12 center-align">
             <h3 translate="landing.area-4.title"></h3>
