--- a/src/app/modules/public/parts/08.html
+++ b/src/app/modules/public/parts/08.html
@@ -1,4 +1,4 @@
-<div class="home container-full center-align dark-primary-color" id="contact">
+<div class="home center-align dark-primary-color" id="contact">
     <h4 class="white-text" translate="landing.connect"></h4>
     <div class="row social-icons">
         <div class="col s6 m3"><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"
