QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -3,7 +3,7 @@
     <div class="container row">
         <div class="col s12 m6">
             <img src="assets/images/Livejournal.png" class="responsive-img left" alt="icone" style="max-width: 5rem; vertical-align: middle"/>
-            <h5 class="hide-on-small-only" translate="landing.area-6.content"></h5>
+            <p class="hide-on-small-only"><b translate="landing.area-6.content"></b></p>
         </div>
 
         <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
